--- a/Views/Partials/_footer.cshtml
+++ b/Views/Partials/_footer.cshtml
@@ -1,37 +1,31 @@
 ﻿@inherits UmbracoViewPage
 
+@{
+    var homePage = Model.AncestorOrSelf<HomePage>();
+}
+
 <!-- Footer-->
     <footer class="border-top">
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
+                @if(homePage?.FooterSocialLinks != null)
+                {
                     <ul class="list-inline text-center">
-                        <li class="list-inline-item">
-                            <a href="#!">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="#!">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="#!">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
+                        @foreach(var item in homePage.FooterSocialLinks)
+                        {
+                            <li class="list-inline-item">
+                                <a href="@item.Url">
+                                    <span class="fa-stack fa-lg">
+                                        <i class="fas fa-circle fa-stack-2x"></i>
+                                        <i class="fab fa-@item.Network fa-stack-1x fa-inverse"></i>
+                                    </span>
+                                </a>
+                            </li>
+                        }
                     </ul>
-                    <div class="small text-center text-muted fst-italic">&copy Copyright Your Website @DateTime.Now.Year</div>
+                }
+                <div class="small text-center text-muted fst-italic">&copy @Umbraco.GetDictionaryValue("Footer.CopyrightTitle") @DateTime.Now.Year</div>
                 </div>
             </div>
         </div>
