--- a/Views/Partials/blocklist/Components/carouselRow.cshtml
+++ b/Views/Partials/blocklist/Components/carouselRow.cshtml
@@ -3,25 +3,20 @@
 @{
     var row = (CarouselRow)Model.Content;
     var settings = (CarouselRowSettings)Model.Settings;
-
-    if (settings?.Hide ?? false) return;
+    if (settings?.Hide ?? false) { return; }
     if (row.CarouselItems == null || !row.CarouselItems.Any()) return;
-
     var carouselId = "carousel-" + row.Key;
-    //var headingId = carouselId + "-heading-" + index;
-
 }
 
-<div id="@carouselId" class="carousel slide @((settings.ShowDarkMode) ? "carousel-dark" : null)" data-bs-ride="carousel">
-    @if (settings.ShowIndicators)
+<div id="@carouselId" class="carousel @((settings?.ShowDarkMode ?? false) ? "carousel-dark" : null) slide" data-bs-ride="carousel">
+    @if (settings?.ShowIndicators ?? false)
     {
         var itemCount = row.CarouselItems.Count;
-        
         <div class="carousel-indicators">
-            @for(var i = 0; i< itemCount; i++)
+            @for (var slideIndex = 0; slideIndex < itemCount; slideIndex++)
             {
-                var isFirst = i == 0;
-                <button type="button" data-bs-target="#@carouselId" data-bs-slide-to="@i" class="@(isFirst ? "active" : null)" aria-current="@isFirst" aria-label="Slide @(i + 1)"></button>
+                var isFirst = slideIndex == 0;
+                <button type="button" data-bs-target="#@carouselId" data-bs-slide-to="@slideIndex" class="@(isFirst ? "active" : null)" aria-current="@isFirst" aria-label="Slide @(slideIndex + 1)"></button>
             }
         </div>
     }
@@ -29,7 +24,6 @@
     <div class="carousel-inner">
         @{
             var itemIndex = 0;
-
             foreach (var item in row.CarouselItems)
             {
                 var rowItem = (CarouselItem)item.Content;
@@ -43,9 +37,8 @@
                 <div class="carousel-item @(isFirstSlide ? "active" : null)">
                     @if (rowItem.Image != null)
                     {
-                        <img src="@rowItem.Image.GetCropUrl(width: 900, height:500)" class="d-block w-100" alt="@rowItem.Image.Name">
+                        <img src="@rowItem.Image.GetCropUrl(width: 900, height: 300)" class="d-block w-100" alt="@rowItem.Image.Name">
                     }
-
                     @if (hasTitle || hasDescription)
                     {
                         <div class="carousel-caption d-none d-md-block">
@@ -60,16 +53,15 @@
                         </div>
                     }
                 </div>
-
                 itemIndex++;
             }
         }
     </div>
-    @if (settings.ShowNavigationArrows)
+    @if (settings?.ShowNavigationArrows ?? false)
     {
-    <button class="carousel-control-prev" type="button" data-bs-target="#@carouselId" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#@carouselId" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
+            <span class="visually-hidden">Previous</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#@carouselId" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
